--- a/src/css/layout/chat/nav/home.css
+++ b/src/css/layout/chat/nav/home.css
@@ -6,9 +6,9 @@
   justify-content: center;
   margin-bottom: 2.5em;
 }
+.logoContainer svg {
+  border-radius: 0.35rem;
+}
 .logoContainer div {
   cursor: pointer;
-}
-.logo path {
-  fill: var(--sidebar-logo);
 }
