--- a/src/css/layout/support/top.css
+++ b/src/css/layout/support/top.css
@@ -14,6 +14,9 @@
     flex-shrink: 0;
     min-height: 3.25rem;
 }
+.navBrand svg {
+    border-radius: 0.35rem;
+}
 .navBrand a {
     align-items: center;
     display: flex;
